--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,6 +14,9 @@
   <!-- 4. *ngIf 디렉티브를 이용한 상품 설명 추가
   <p>엘리먼트에 *ngIf 디렉티브를 추가하면 상품 설명이 존재할 때만 상품의 설명을 위한 엘리먼트가 추가된다. -->
   <p *ngIf="product.description">Description: {{ product.description }}</p>
+  <!-- 5. 상품 공유를 위한 버튼 추가 및 이벤트 핸들러 바인딩
+  엘리먼트에서 발생하는 이벤트 감지를 위해서는 이벤트 이름을 소괄호로 감싸준다. -->
+  <button (click)="share()">Share</button>
 </div>
 
 <!-- 
