feat: 자식 컴포넌트로 데이터 전달하기

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -17,6 +17,7 @@
   <!-- 5. 상품 공유를 위한 버튼 추가 및 이벤트 핸들러 바인딩
   엘리먼트에서 발생하는 이벤트 감지를 위해서는 이벤트 이름을 소괄호로 감싸준다. -->
   <button (click)="share()">Share</button>
+  <app-product-alerts [product]="product"> </app-product-alerts>
 </div>
 
 <!-- 
